NOTIFICATION 병합 후 수정 및 채용제안 상세 모달에 채팅 기능 추가, 서버 중앙화